src/pages/RegisterPage/index.module.css
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 2rem;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-bottom: 2rem;
  border-radius: 10px;
}

.title {
  font-size: 2rem;
  margin-bottom: 2rem;
  color: #333;
}

.form {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  align-items: center;
  justify-content: center;
  width: 100%;
  max-width: 500px;
  background-color: #fff;
  padding: 2rem;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}

.inputContainer {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  width: 100%;
}

.inputContainer input::placeholder {
  opacity: 1;
  color: #999;
}

.inputContainer label,
.inputContainer input,
.inputContainer select,
input[type="submit"] {
  font-size: 1.3rem;
}

.inputContainer label,
.inputContainer input,
.inputContainer select {
  color: #333;
}

.inputContainer input,
.inputContainer select {
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 0.75rem;
}

.inputContainer select {
  background-color: #fff;
}

.radioContainer {
  width: auto;
  margin-right: 1rem;
  margin-top: 1rem;
}

.inputContainer input:focus,
.inputContainer select:focus {
  border-color: #007bff;
  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
  outline: none;
}

.inputContainer div {
  display: flex;
  align-items: center;
}

.inputContainer div label {
  margin-right: 1rem;
}

input[type="submit"] {
  padding: 0.75rem 1.5rem;
  border: none;
  border-radius: 5px;
  background-color: #007bff;
  color: #fff;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

input[type="submit"]:hover {
  background-color: #0056b3;
}

.feeInfo {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  font-size: 1.2rem;
  width: 100%;
}

.bankInfo {
  margin-top: 1rem;
  font-weight: 600;
}

.bankInfo:last-of-type {
  margin-bottom: 1rem;
}

@media (max-width: 768px) {
  .form {
    width: 80%;
  }
}

@media (max-width: 480px) {
  .form {
    width: 100%;
  }

  .title {
    font-size: 1.5rem;
  }

  .inputContainer label {
    font-size: 1rem;
  }

  .inputContainer input,
  .inputContainer select {
    padding: 0.5rem;
    font-size: 0.875rem;
  }
}

